[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Troops/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Troops/Player/PlayerMesh/PlayerMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Troops/Player/CameraBase.gd" type="Script" id=3]
[ext_resource path="res://src/Ships/Camera/ShipCamera.gd" type="Script" id=4]
[ext_resource path="res://src/Troops/Player/Weapons.gd" type="Script" id=5]
[ext_resource path="res://src/Weapons/Player/Gun/Gun.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Troops/Player/PlayerStateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/Troops/Player/StateMachine/Idle.gd" type="Script" id=8]
[ext_resource path="res://src/Troops/Player/StateMachine/Aim.gd" type="Script" id=9]
[ext_resource path="res://src/Troops/Player/StateMachine/Move.gd" type="Script" id=10]
[ext_resource path="res://src/Troops/Player/StateMachine/State.gd" type="Script" id=11]
[ext_resource path="res://src/Troops/Player/StateMachine/Interact.gd" type="Script" id=12]
[ext_resource path="res://src/Troops/Player/PlayerCrouch.gd" type="Script" id=13]
[ext_resource path="res://src/Troops/Player/PlayerInteraction.gd" type="Script" id=14]
[ext_resource path="res://src/HealthSystem/HealthSystem.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Troops/TroopManager/TroopManager.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Troops/Player/InputManager.gd" type="Script" id=17]
[ext_resource path="res://src/Troops/Player/HUD/PlayerHUD.gd" type="Script" id=18]
[ext_resource path="res://src/Troops/Player/HUD/LifeBar.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=20]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.6
mid_height = 2.4

[sub_resource type="CapsuleShape" id=2]
radius = 0.6
height = 2.4

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 20 )

[node name="Player" type="KinematicBody" groups=[
"Players",
"Troops",
]]
pause_mode = 1
collision_layer = 2
collision_mask = 25
script = ExtResource( 1 )

[node name="PlayerMesh" parent="." instance=ExtResource( 2 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Tail" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.8, 0 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="CameraBase" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="CameraBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 4.15 )
far = 5000.0

[node name="Tween" type="Tween" parent="CameraBase"]

[node name="ShipCamera" type="Camera" parent="CameraBase"]
pause_mode = 1
visible = false
far = 5000.0
script = ExtResource( 4 )

[node name="Weapons" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Gun" parent="Weapons" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.8, -0.3 )

[node name="Listener" type="Listener" parent="."]
current = true

[node name="StateMachine" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 7 )
START_STATE = NodePath("Movement/Idle")

[node name="Movement" type="Node" parent="StateMachine"]
editor/display_folded = true

[node name="Idle" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 8 )

[node name="Aim" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 10 )

[node name="Jump" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 11 )

[node name="Crouch" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 11 )

[node name="Dodge" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 11 )

[node name="Interact" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Attack" type="Node" parent="StateMachine"]

[node name="Shoot" type="Node" parent="StateMachine/Attack"]
script = ExtResource( 11 )

[node name="Melee" type="Node" parent="StateMachine/Attack"]
script = ExtResource( 11 )

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Crouch" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Interaction" type="Node" parent="."]
script = ExtResource( 14 )

[node name="HealthSystem" parent="." instance=ExtResource( 15 )]

[node name="TroopManager" parent="." instance=ExtResource( 16 )]

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 17 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 18 )

[node name="LifeBarTimer" type="Timer" parent="HUD"]
one_shot = true

[node name="PlayerLifeBar" parent="HUD" instance=ExtResource( 19 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.5
margin_top = -100.0
margin_right = 62.5005
margin_bottom = -80.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 62, 10 )
tint_over = Color( 1, 1, 1, 0 )
tint_progress = Color( 1, 1, 1, 1 )

[node name="ColorRect" type="ColorRect" parent="HUD/PlayerLifeBar"]
modulate = Color( 0.290196, 0.290196, 0.290196, 0.588235 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -14.0
margin_right = 66.5
margin_bottom = 14.0

[node name="Nickname" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -315.5
margin_right = 115.0
margin_bottom = -284.5
rect_pivot_offset = Vector2( 115, 15.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.447059, 0.447059, 1 )
text = "Noname"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="HUD/LifeBarTimer" to="HUD" method="_on_LifeBarTimer_timeout"]
